--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
@@ -15,7 +16,9 @@ MarkupSafe==1.1.1
 psycopg2-binary==2.8.3
 python-dateutil==2.8.0
 python-editor==1.0.4
+redis==3.3.10
 requests==2.22.0
+rq==1.1.0
 six==1.12.0
 SQLAlchemy==1.3.9
 urllib3==1.25.6
