--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Jinja2==2.10.1
 Mako==1.1.0
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.3
+pyTelegramBotAPI==3.6.6
 python-dateutil==2.8.0
 python-editor==1.0.4
 redis==3.3.10
